style: fix gap

--- a/src/components/Footer/FooterNavigate/FooterNavigate.module.css
+++ b/src/components/Footer/FooterNavigate/FooterNavigate.module.css
@@ -1,6 +1,7 @@
 .wrapper {
     display: flex;
     flex-wrap: wrap;
+    gap: 64px;
 }
 
 .list {
